# iced

examples/custom_shader_quad/: Cargo.toml
examples/custom_shader_quad/src/: custom_shader.wgsl  main.rs
examples/pane_grid/src/: main.rs
examples/shader_widget/: Cargo.toml
examples/shader_widget/src/: main.rs
graphics/src/: layer.rs  primitive.rs  renderer.rs
graphics/src/layer/: custom_shader_quad.rs
native/src/: lib.rs  renderer.rs  shader.rs  widget.rs
native/src/renderer/: null.rs
native/src/widget/: wgsl_shader_quad.rs
wgpu/src/: backend.rs  custom_shader_quad.rs  lib.rs
wgpu/src/shader/: default_quad_shader.wgsl
