[package]
name = "custom_shader_quad"
version = "0.1.0"
authors = ["Robert Krahn"]
edition = "2021"
publish = false

[dependencies]
iced = { path = "../..", features = ["canvas", "tokio", "debug"] }
iced_native = { path = "../../native" }
iced_lazy = { path = "../../lazy" }
time = { version = "0.3.5", features = ["local-offset"] }
