[package]
name = "shader_widget"
version = "0.1.0"
authors = ["Eliot Bolduc"]
edition = "2021"
publish = false

[dependencies]
iced = { path = "../..", features = ["tokio", "debug"] }
iced_native = { path = "../../native" }
iced_lazy = { path = "../../lazy" }
time = { version = "0.3.5", features = ["local-offset"] }
